--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "expo": "^49.0.13",
     "expo-status-bar": "~1.6.0",
     "express": "^4.18.2",
+    "passport-apple": "^2.0.2",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-paper": "^5.10.6",
