--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "expo": "^49.0.13",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "express": "^4.18.2",
     "passport-apple": "^2.0.2",
@@ -24,6 +25,7 @@
     "react-native": "0.72.5",
     "react-native-paper": "^5.10.6",
     "react-native-safe-area-context": "^4.7.2",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^10.0.0",
     "tamagui": "^1.74.11"
   },
